ipc/ipdl/test/ipdl/error/redeclParamReturn.ipdl
sync protocol redeclParamReturn {

    // it's an error to name a parameter with the same id as a return

parent: async Msg(int f) returns (bool f);

};
